--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -5,7 +5,7 @@ tags: [dataquest, python, numpy, pandas]
 maths: 1
 toc: 1
 comment: 1
-date: 2018-09-20
+date: 2018-09-23
 ---
 
 This note is used for my notes about the [**Data Scientist** path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some *new-for-me* things.
@@ -226,10 +226,10 @@ f500 = pd.read_csv("f500.csv", index_col=0)
 f500.index.name = None
 	~~~
 
-- Sort the rows of `f500` by columns `employees`
+- Sort the rows of `f500` by columns `employees` (it **returns** another df but does not change the df itself)
 
 	~~~ python
-sorted_emp = f500.sort_values("employees", ascending=False)
+sorted_emp = f500.sort_values(by=["employees"], ascending=False)
 	~~~
 
 - `s.str.contains("<str>")` : check if str is in s or not
@@ -255,4 +255,93 @@ print(rev_change_null[["company","country","sector"]])
   previously_ranked.loc["rank"] - previously_ranked.loc["prev_rank"] # 2 different columns (dataframe)
   previously_ranked["rank"] - previously_ranked["prev_rank"] # 1 column (series)
 	~~~
+- Using boolean operators
 
+	~~~ python
+combined = (f500_sel["revenues"] > 265000) & (f500_sel["country"] == "China")
+combined = over_265 & china
+final_cols = ["company", "revenues"]
+result = f500_sel[combined, final_cols]
+	~~~
+
+	or just one line
+
+	~~~ python
+result = f500_sel.loc[(f500_sel["revenues"] > 265000) & (f500_sel["country"] == "China"), final_cols]
+	~~~
+- **Comparision operators**: `==`, `~(a==b)` (not equal)
+- **Panda index alignment**. If a dataframe `food` and a series `colors` have the same index (but diff order), they can be couple with
+	- `food["color"] = colors`
+	- Discards any items that have an index that doesn't match the dataframe
+- **<mark>Loops in df</mark>**: loop over a dataframe, it returns the column index labels, rather than the rows as we might expect.
+- `s.unique()`returns **an array** of unique values from any series
+- Find the average revenue for each unique country in `f500`
+
+	~~~ python
+  # Create an empty dictionary to store the results
+  avg_rev_by_country = {}
+
+  # Create an array of unique countries
+  countries = f500["country"].unique()
+
+  # Use a for loop to iterate over the countries
+  for c in countries:
+	# Use boolean comparison to select only rows that
+	# correspond to a specific country
+	selected_rows = f500[f500["country"] == c]
+	# Calculate the mean average revenue for just those rows
+	mean = selected_rows["revenues"].mean()
+	# Assign the mean value to the dictionary, using the
+	# country name as the key
+	avg_rev_by_country[c] = mean
+	~~~
+
+## Mission 293 - Data cleaning basics
+
+{% include download.html content="[Download mission 293](/files/dataquest/mission-293.pdf)." %}
+
+- **The most common encodings**: UTF-8 (the default for Python), Latin-1 (also known as ISO-8895-1), Windows-1251.
+
+	~~~ python
+laptops = pd.read_csv("laptops.csv", encoding="Latin-1")
+laptops.info() # see the general info of the dataset
+	~~~
+
+	`UTF-8` is default, no need to be indicate when using.
+
+- `df_test = df.copy()`: copy data frame for testing
+- `df.columns` returns an index object with the label of each columns.
+- Cleans strings
+
+	~~~ python
+  def clean_col(col):
+    col = col.strip() # removes white space from the start and end
+    col = col.replace("(","")
+    col = col.replace(")","")
+    col = col.lower()
+    return col
+
+  laptops.columns = [clean_col(c) for c in laptops.columns]
+	~~~
+- `series.str.replace("text1", "text2")`: look like `string.replace()` but a vectorized version for many items.
+	- **Tips**: we can use `s.str.replace().str.replace()`(many times)
+- `s.astype(float)` or `s.astype(int)` change to numeric for all items in a series
+- `df.rename({"<old-label>": "<new-label>"}, axis=1, inplace=True)`
+
+~~~ python
+laptops["screen_size"] = laptops["screen_size"].str.replace('"','').astype(float)
+laptops.rename({"screen_size": "screen_size_inches"}, axis=1, inplace=True)
+~~~
+
+![Cleaning workflow](/images/posts/data/dataquest/cleaning_workflow.svg){:.no-border .w-700}
+
+- **Tips:** method chaining : we ue as below so that if there is any error, we can know exactly which line.
+
+~~~ python
+laptops["weight"] = (laptops["weight"]
+                        .str.replace("kg","")
+                        .astype(float)
+                    )
+~~~
+
+- 
