--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -1,11 +1,11 @@
 ---
-title: "DataQuest 2: Data Analysis and Visualization"
+title: "DataQuest 2: Pandas and Numpy fundamentals"
 categories: [ml, it, data]
 tags: [dataquest, python, numpy, pandas]
 maths: 1
 toc: 1
 comment: 1
-date: 2018-09-23
+date: 2018-09-24
 ---
 
 This note is used for my notes about the [**Data Scientist** path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some *new-for-me* things.
@@ -233,8 +233,9 @@ sorted_emp = f500.sort_values(by=["employees"], ascending=False)
 	~~~
 
 - `s.str.contains("<str>")` : check if str is in s or not
-- `s.str.endwith("<str>")` : check if s ends with str or not
-- `s.str.startwith("<str>")`
+	- `s.str.contains("<str>", regex = False)` if we want to consider str as a string.
+- `s.str.endswith("<str>")` : check if s ends with str or not
+- `s.str.startswith("<str>")`
 - `s.isnull()` or `s.notnull()` : check s contains NaN or null
 
 	~~~ python
@@ -307,7 +308,7 @@ laptops = pd.read_csv("laptops.csv", encoding="Latin-1")
 laptops.info() # see the general info of the dataset
 	~~~
 
-	`UTF-8` is default, no need to be indicate when using.
+	`UTF-8` is default, no need to be indicated when using.
 
 - `df_test = df.copy()`: copy data frame for testing
 - `df.columns` returns an index object with the label of each columns.
@@ -324,7 +325,7 @@ laptops.info() # see the general info of the dataset
   laptops.columns = [clean_col(c) for c in laptops.columns]
 	~~~
 - `series.str.replace("text1", "text2")`: look like `string.replace()` but a vectorized version for many items.
-	- **Tips**: we can use `s.str.replace().str.replace()`(many times)
+	- **Tips**: we can use `s.str.replace().str.replace()`(<mark>many times</mark>)
 - `s.astype(float)` or `s.astype(int)` change to numeric for all items in a series
 - `df.rename({"<old-label>": "<new-label>"}, axis=1, inplace=True)`
 
@@ -337,11 +338,78 @@ laptops.rename({"screen_size": "screen_size_inches"}, axis=1, inplace=True)
 
 - **Tips:** method chaining : we ue as below so that if there is any error, we can know exactly which line.
 
-~~~ python
-laptops["weight"] = (laptops["weight"]
-                        .str.replace("kg","")
+	~~~ python
+  laptops["weight"] = (laptops["weight"]
+             			  .str.replace("kg","")
                         .astype(float)
-                    )
-~~~
+	                  )
+	~~~
 
-- 
+	<mark>There is `()` before and after.</mark>
+
+- `s.str.split()`: slits strings inside a series by whitespace (`[s t r]` becomes `[s,t,r]`)
+	- `s.str.split(n=1)` : performs a single split at first whitespace
+	- Note that, after splitting, there will be a **list inside this series**, not good!
+- We can exapnd to a new df after splitting: `s.str.split(n=1, expand=True)`
+- Couple: `s.str.split(n=1, expand=True).iloc[:, 0]` (select first column)
+- **Split from the right**: `s.str.rsplit()`
+- Example
+
+	~~~ python
+	screen_res = laptops["screen"].str.rsplit(n=1, expand=True)
+	# giving the columns string labels makes them easier to work with
+	screen_res.columns = ["A", "B"]
+	# for rows where the value of column "B" is null, fill in the
+	# value found in column "A" for that row
+	screen_res.loc[screen_res["B"].isnull(), "B"] = screen_res["A"]
+	print(screen_res.iloc[:10])
+	~~~
+- `s.map(<dictionary>)` to fix a list of "the same" values but diff typing. If there is no value in `s` which are in the key of <dictionary>, all will be mapped to `NaN`. Thus, <mark>include both correct or incorret values in dictionary</mark>
+
+	~~~ python
+  mapping_dict = {
+      'Android': 'Android',
+      'Chrome OS': 'Chrome OS',
+      'Linux': 'Linux',
+      'Mac OS': 'macOS',
+      'No OS': 'No OS',
+      'Windows': 'Windows',
+      'macOS': 'macOS'
+  }
+  laptops["os"] = laptops["os"].map(mapping_dict)
+	~~~
+
+- Identify which values are missing: using `df.info()` or `df.isnull()`
+
+	~~~ python
+laptops.isnull().sum()
+	~~~
+
+- **Dropping**: Removing rows/columns having null values. Use `df.dropna()`
+	- `df.dropna()`: removes rows, `df.dropna(axis=1)`: removes columns
+- `s.value_counts(dropna=False)` includes also the null (normally, it doesn't)
+- `df.drop('<column>', axis=1)` removes a column and without `aixs` to remove a row.
+	- `df.drop([<list-of-columns>])`
+- **Reorder column**:
+	- `df.columns`: list of all columns
+	- `df.to_csv()`: save out CSV file and option `index=False` if we don't want to save the index labels.
+
+	~~~ python
+  cols = ['manufacturer', 'model_name', 'category', 'screen_size_inches',
+          'screen', 'cpu', 'cpu_manufacturer',  'cpu_speed', 'ram_gb',
+          'storage_1_type', 'storage_1_capacity_gb', 'storage_2_type',
+          'storage_2_capacity_gb', 'gpu', 'gpu_manufacturer', 'os',
+          'os_version', 'weight_kg', 'price_euros']
+
+  laptops = laptops[cols]
+  laptops.to_csv("laptops_cleaned.csv", index=False)
+	~~~
+
+
+
+
+
+
+
+
+
