ud ml coursera w5

--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -342,4 +342,4 @@ print(sex_counts)
 - Remember that: using `<dict>.items()` for dictionary and `enumerates(<list>)` for list in `for key, val in ...`
 
 
-{% include more.html content="[Go to Dataquest note 2](/dataquest-2)." %}
+{% include more.html content="[Go to Dataquest note 2 - Pandas and Numpy Fundamentals](/dataquest-2-pandas-numpy-fundamentals)." %}
