ud dataquest and some others

--- a/_posts/introduction statistic learning/2018-09-13-ISL-1.md
+++ b/_posts/introduction statistic learning/2018-09-13-ISL-1.md
@@ -8,7 +8,9 @@ toc: 1
 
 {% assign img-url = '/images/posts/ISL' %}
 
-I use this note to archive everything I learn from the book **An introduction to statistic learning** by Gareth James.
+I use this note to archive everything I learn from the book **An introduction to statistic learning** by Gareth James. Note that, I read this book on a electronic version. So, there are many remarks I wrote directly on the pdf file.
+
+{% include more.html content="[Read my ISL's pdf file.](/files/ISL_thi_notes.pdf) (available after I finish this book)" %}
 
 {% include toc.html %}
 
