--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -1,7 +1,7 @@
 ---
 title: "DataQuest 1: Python Introduction"
 categories: [ml, it, data]
-tags: [dataquest, python]
+tags: [dataquest, python, data]
 maths: 1
 toc: 1
 date: 2018-09-09
