--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -1,5 +1,5 @@
 ---
-title: "DataQuest 1: Python Introduction"
+title: "DataQuest 1: Step 1 - Python Introduction"
 categories: [ml, it, data]
 tags: [dataquest, python, data]
 maths: 1
@@ -139,41 +139,42 @@ for idx, value in enumerate(['foo', 'bar']):
 - [Python special methods](https://docs.python.org/3/reference/datamodel.html#basic-customization) : like `__init__`
 	-  When we implemented `__init__()`, it told the python interpreter that anything within that method is what we want to initialize when we create our object.
 	-  `__str__`: return display of a dataset
--  Sample code of `Dataset` class in this mission
+- Sample code of `Dataset` class in this mission
 
-	~~~ python
-class Dataset:
-    def __init__(self, data):
-        self.header = data[0]
-        self.data = data[1:]
-    
-    # Add the special method here
-    def __str__(self):
-        return str(self.data[0:10])
-    
-    def column(self, label):
-        if label not in self.header:
-            return None
-        
-        index = 0
-        for idx, element in enumerate(self.header):
-            if label == element:
-                index = idx
-        
-        column = []
-        for row in self.data:
-            column.append(row[index])
-        return column
-    
-        
-    def count_unique(self, label):
-        unique_results = set(self.column(label))
-        count = len(unique_results)
-        return count
+  ~~~ python
+  class Dataset:
+   def __init__(self, data):
+       self.header = data[0]
+       self.data = data[1:]
+   
+   # Add the special method here
+   def __str__(self):
+       return str(self.data[0:10])
+   
+   def column(self, label):
+       if label not in self.header:
+           return None
+       
+       index = 0
+       for idx, element in enumerate(self.header):
+           if label == element:
+               index = idx
+       
+       column = []
+       for row in self.data:
+           column.append(row[index])
+       return column
+   
+       
+   def count_unique(self, label):
+       unique_results = set(self.column(label))
+       count = len(unique_results)
+       return count
+  ~~~
 
 nfl_dataset = Dataset(nfl_data)
 print(nfl_dataset)
-	~~~
+​	~~~
 
 ## Mission 7 - Error Handling
 
