--- a/_posts/it/2018-09-03-git-note.md
+++ b/_posts/it/2018-09-03-git-note.md
@@ -3,6 +3,7 @@ title: Git - Github - Gitlab notes
 categories: it
 tags: ["git","github"]
 date: 2018-09-03
+snippet: 1
 ---
 
 This note is used for my daily working routine with git.
