fix code highlight + change back to url dataquest2

--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -343,4 +343,4 @@ print(sex_counts)
 - Remember that: using `<dict>.items()` for dictionary and `enumerates(<list>)` for list in `for key, val in ...`
 
 
-{% include more.html content="[Go to Dataquest note 2 - Pandas and Numpy Fundamentals](/dataquest-2-pandas-numpy-fundamentals)." %}
+{% include more.html content="[Go to Dataquest 2: Step 2 - Pandas and Numpy Fundamentals](/dataquest-2-pandas-numpy-fundamentals)." %}
