change maths to math and delete functions note

--- a/_posts/introduction statistic learning/2018-09-13-ISL-1.md
+++ b/_posts/introduction statistic learning/2018-09-13-ISL-1.md
@@ -1,6 +1,6 @@
 ---
 title: "Reading: An introduction to Statistic Learning 1" 
-categories: [math]
+categories: [maths]
 tags: [statistics, data, R, ISL]
 math: 1
 toc: 1
