--- a/_posts/maths/2017-03-21-analysis-1.md
+++ b/_posts/maths/2017-03-21-analysis-1.md
@@ -1,9 +1,9 @@
 ---
 title: Analysis general note 1
-categories: maths
+categories: math
 maths: 1
 toc: 1
-tags: [analysis series,analysis]
+tags: [analysis series,analysis,phd,math]
 ---
 
 > Xem các phần khác [tại đây](/tags#analysis-series).
