--- a/_posts/maths/2017-03-21-analysis-2.md
+++ b/_posts/maths/2017-03-21-analysis-2.md
@@ -1,9 +1,8 @@
 ---
 title: Analysis general note 2
-categories:
-  - maths
+categories: math
 toc: 1
-tags: [analysis series,analysis]
+tags: [analysis series,analysis,phd,math]
 maths: 1
 ---
 
