--- a/_posts/maths/2017-03-21-analysis-3.md
+++ b/_posts/maths/2017-03-21-analysis-3.md
@@ -1,10 +1,9 @@
 ---
 title: Analysis general note 3
-categories:
-  - maths
+categories: math
 toc: 1
-tags: [analysis series,analysis]
-maths: 1`
+tags: [analysis series,analysis,phd,math]
+maths: 1
 date: 2018-08-04
 ---
 
