--- a/_posts/phd/2017-03-21-biofilms.md
+++ b/_posts/phd/2017-03-21-biofilms.md
@@ -1,6 +1,6 @@
 ---
-title: Biofilms
-categories: [maths,phd]
+title: "PhD: Biofilms"
+categories: [phd]
 tags: [phd,numerical analysis]
 maths: 1
 ---
