--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -1,9 +1,8 @@
 ---
-title: Các bài báo/công việc của người khác (papers)
-categories: [maths,phd]
-tags: [phd,numerical analysis]
+title: "PhD: Reading papers"
+categories: [phd]
+tags: [phd,numerical analysis,math]
 toc: 1
-tags: [phd,numerical analysis]
 maths: 1
 ---
 
