--- a/_posts/phd/2017-03-21-article-1.md
+++ b/_posts/phd/2017-03-21-article-1.md
@@ -1,7 +1,7 @@
 ---
-title: Note on article 1
-categories: [phd,maths]
-tags: [phd]
+title: "PhD: Note on article 1"
+categories: [phd]
+tags: [phd,math]
 toc: 1
 maths: 1
 date: 2018-03-21
