--- a/_posts/it/2018-10-21-IT-tips.md
+++ b/_posts/it/2018-10-21-IT-tips.md
@@ -14,3 +14,63 @@ This note contains all tips in IT (tips in using apps, webs,...)
 - Replace current bit.ly text with its same url:
   - Find: `(http://bit.ly.*)` (Enable `.*`)
   - Replace: `[$1]($1)`
+
+## Game
+
+### Xonotic
+
+Copy maps for this game: Trong ubuntu: _nautilus /home/thi/snap/xonotic/14/.xonotic/data_. Copy hết mấy cái trong `dlcache` ra `data/` là được.
+
+## Skype
+
+Show mini video call: Vào Tools > Options > Call settings > untick vào "Show call controls when skype in the background > Trong khung chat nhấn vào biểu tượng hình 3 chấm > chọn Pop-out
+
+## Facebook
+
+Cách đơn giản để download video từ facebook, đặc biệt là các video chế độ bạn bè. 
+
+- Vào xem video đó bình thường trên máy tính.
+- Thay "https://www." bằng "m." trên thanh địa chỉ của video rối nhấn enter.
+- Chuột phải vào video chọn "Save video as..." để lưu về máy.
+
+## Windows
+
+### Thay đổi directory mặc định trong PowerShell
+
+- Create a folder in your Documents folder called WindowsPowerShell
+- Create a file called profile.ps1 inside this folder
+- Add following command `Set-Location c:\abc`
+- Every time you launch PowerShell, the profile script will be executed
+
+### Share wifi windows 10
+
+Vào Settings > Mobile hotspot > Kích hoạt và sửa tùy chọn!
+
+### Facetime recording with windows
+
+- Download [LonelyScreen](https://www.lonelyscreen.com/download.html) and install it
+- Open LonelyScreen and change the server name (optional)
+- Connect both Windows PC and iPhone to the same wifi network
+- In the facetime calling, swipe up and click on airplay to share.
+- On LonelyScreen, click the record button.
+
+## cmder
+
+### Thay đổi directory mặc định của cmder
+
+- Vào settings của cmder
+- Chọn Startup > Tasks
+- Chọn `{cmd::Cmder}`
+- Nhấn vào cái ô bự góc dưới bên phải, để con trỏ cuối hàng text
+- Nhấn nút "Startup dir..."
+- Chọn đến đường dẫn cần > OK
+- Xóa dòng hiện có giống với cái vừa hiện ra (`new_console:d:%USERPROFILE%`)
+- Nhấn Save settings
+
+### Tăng font size trong cmder
+
+Vào settings, chọn Main, có mục chỉnh size, nên chọn 18.
+
+## Matlab
+
+Change default location: Home > Preferences > MATLAB > General
