change categories and add web cat

--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -1,6 +1,6 @@
 ---
 title: "DataQuest 1: Step 1 - Python Introduction"
-categories: [ml, data]
+categories: [data]
 tags: [dataquest, python, data]
 maths: 1
 toc: 1
