--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -16,21 +16,12 @@ date: 2018-06-22
 
 ## Linh tinh
 
-Các bài báo cần nhưng chưa download được:
-- **Pohozaev, S.T.** The Dirihlet problem for the equation $\Delta u=u^2$, Soviet Math.
-- **Ishihara K.** On finite element schemes of the Dirichlet problem for a system of nonlinear elliptic equations. Numer Funct Anal and Optimiz.
-
----
-
-**Vùng lân cận** : the vicinity of the interface $\Gamma$.
-
----
-
-Cách định nghĩa và hình minh họa của jump và average được cho trong sách *discontinuous galerkin method BOOK - Di Pietro-Ern.pdf* trang 29 pdf. Mesh Faces, Averages and jumps cũng nói khá rõ và chi tiết trong mục 1.2.3 của sách này.
-
----
-
-Chopp có một note (*chopp NOTE moving interface.pdf*) để nói về interface problem luôn. Trong đây ổng có nhắc về **time step vs time independent**, level set method, fast marching method,
+- Các bài báo cần nhưng chưa download được:
+  - **Pohozaev, S.T.** The Dirihlet problem for the equation $\Delta u=u^2$, Soviet Math.
+  - **Ishihara K.** On finite element schemes of the Dirichlet problem for a system of nonlinear elliptic equations. Numer Funct Anal and Optimiz.
+- **Vùng lân cận** : the vicinity of the interface $\Gamma$.
+- Cách định nghĩa và hình minh họa của jump và average được cho trong sách *discontinuous galerkin method BOOK - Di Pietro-Ern.pdf* trang 29 pdf. Mesh Faces, Averages and jumps cũng nói khá rõ và chi tiết trong mục 1.2.3 của sách này.
+- Chopp có một note (*chopp NOTE moving interface.pdf*) để nói về interface problem luôn. Trong đây ổng có nhắc về **time step vs time independent**, level set method, fast marching method,
 
 ## Link and locations
 
@@ -61,24 +52,12 @@ Chopp có một note (*chopp NOTE moving interface.pdf*) để nói về interfa
 
 ## Discussion với cô & Ideas
 
-Hansbo, Loch, Lehrenfeld, Trung-Hieu, Arnold, Hansbo, Barrau,.. chỉ làm việc trên NXFEM cho linear thông thường.
-
-**Mình** : nonlinear + system + nxfem : nhưng chỉ tập trung vào system + existence + convergence.
-
-**Còn thiếu** : nonlinear + nxfem cho single equation, convergence của nghiệm, rate of convergence, stability,... $\Rightarrow$ có thể được một bài báo nữa.
-
----
-
-Convergence theo nghĩa thông thường $\Vert u-u_h \Vert$ chỉ có thể áp dụng nếu như chứng minh được nghiệm duy nhất. Còn không thì phải làm theo hướng hội tụ yếu hay hầu khắp nơi gì đó.
-
----
-
-Cô nói mình xem cái thèse và bài báo của **barrau** (cf. **Barrau2013**) để bắt chước và viết theo.
-
----
-
-Các bài báo của **Cogan** đều thiếu 1 cái gì đó, cô đã nói như vậy.
-
+- Hansbo, Loch, Lehrenfeld, Trung-Hieu, Arnold, Hansbo, Barrau,.. chỉ làm việc trên NXFEM cho linear thông thường.
+  - **Mình** : nonlinear + system + nxfem : nhưng chỉ tập trung vào system + existence + convergence.
+  - **Còn thiếu** : nonlinear + nxfem cho single equation, convergence của nghiệm, rate of convergence, stability,... $\Rightarrow$ có thể được một bài báo nữa.
+- Convergence theo nghĩa thông thường $\Vert u-u_h \Vert$ chỉ có thể áp dụng nếu như chứng minh được nghiệm duy nhất. Còn không thì phải làm theo hướng hội tụ yếu hay hầu khắp nơi gì đó.
+- Cô nói mình xem cái thèse và bài báo của **barrau** (cf. **Barrau2013**) để bắt chước và viết theo.
+- Các bài báo của **Cogan** đều thiếu 1 cái gì đó, cô đã nói như vậy.
 
 ## Other information
 
