--- a/_posts/it/2018-10-21-IT-tips.md
+++ b/_posts/it/2018-10-21-IT-tips.md
@@ -8,6 +8,10 @@ snippet: 1
 
 This note contains all tips in IT (tips in using apps, webs,...)
 
+## Internet - Web apps
+
+- Remove apps permission from Google Apps (Youtube, Google Play Music, ...): [here](https://myaccount.google.com/permissions)
+
 ## Visual Studio Code
 
 - Using regular expression in Visual Studio (Code): [ref](https://docs.microsoft.com/en-us/visualstudio/ide/using-regular-expressions-in-visual-studio?view=vs-2017)
