--- a/_posts/it/2018-09-03-git-note.md
+++ b/_posts/it/2018-09-03-git-note.md
@@ -31,7 +31,7 @@ git config credential.helper store
 
 6. Check the status: `git status`, `git log --oneline --graph --color --all --decorate`
 
-7. Discard the change: `git .`
+7. Discard the change: `git checkout .`
 
 8. Temporarily check a commit: `git checkout <commitID>`, if the work's done, just check out back to the current working branch.
 
