--- a/_posts/it/2018-09-03-git-note.md
+++ b/_posts/it/2018-09-03-git-note.md
@@ -56,3 +56,11 @@ git merge <nhanh>
 git config --global --unset http.proxy 
 git config --global --unset https.proxy
 	~~~
+
+12. Copy/update a folder from another branch to current branch. Suppose that we wanna copy folder **abc** from branch **test5** to current brach **other-machine**
+
+	~~~ bash
+git checkout other-machine # go to current branch
+git checkout test5 path/to/abc
+git status # to see the change
+	~~~
