--- a/_posts/it/2017-03-26-css-note.md
+++ b/_posts/it/2017-03-26-css-note.md
@@ -3,6 +3,7 @@ title: CSS notes
 categories: web
 tags: [css]
 toc: 1
+date: 2018-12-01
 ---
 
 ## CSS combinatiors
@@ -16,6 +17,31 @@ For more information, click [here](https://www.w3schools.com/css/css_combinators
 `div + p` : select all `<p>` elements that are placed immediately after `<div>` element.
 
 `div ~ p` : select all `<p>` elements that are siblings (cùng bậc/anh chị em) of `<div>` element.
+
+## Auto rotate text by CSS
+
+[Cf](http://jsfiddle.net/owcywjfw/263/). If you wanna class `.card` to be rotated,
+
+~~~ css
+.card{
+	background: #00f;
+	width: 100px;
+	height: 100px;
+	animation: rotate 2s infinite;
+	-webkit-animation: rotate 2s infinite;
+}
+
+@-webkit-keyframes rotate {
+	100% {
+		transform: rotate(-14deg);
+	}
+}
+@keyframes rotate {
+	100% {
+		transform: rotate(-14deg);
+	}
+}
+~~~
 
 ## Chia cột tự động
 
