--- a/_posts/it/2018-09-03-git-note.md
+++ b/_posts/it/2018-09-03-git-note.md
@@ -3,7 +3,7 @@ title: Git - Github - Gitlab notes
 categories: it
 tags: ["git","github"]
 snippet: 1
-date: 2018-09-03
+date: 2018-11-28
 ---
 
 This note is used for my daily working routine with git.
@@ -48,6 +48,7 @@ git merge <nhanh>
 
 	- Compare 2 branches: `git diff <src-branch> <compared-branch>`
 	- Delete: `git branch -d <branch>`
+	- Delete (remove): `git push --delete origin <branch>`
 	- Add description: `git branch --edit-description` (if you wanna exit Vim, press ESC then type `:q` to quit or `:wq` to quit and write)
 
 11. **Error**: `Could not resolve host: github.com`
@@ -63,4 +64,11 @@ git config --global --unset https.proxy
 git checkout other-machine # go to current branch
 git checkout test5 path/to/abc
 git status # to see the change
+	~~~
+
+13. Pull from remote and replace everything from remote to local
+
+	~~~ bash
+git fetch origin
+git reset --hard origin/master
 	~~~
