--- a/_posts/it/2017-03-26-css-note.md
+++ b/_posts/it/2017-03-26-css-note.md
@@ -31,15 +31,30 @@ For more information, click [here](https://www.w3schools.com/css/css_combinators
 	-webkit-animation: rotate 2s infinite;
 }
 
+@-o-keyframes rotate {
+  50% {
+    transform: rotate(-14deg);
+  }
+}
+@-moz-keyframes rotate {
+  50% {
+    transform: rotate(-14deg);
+  }
+}
+@-ms-keyframes rotate {
+  50% {
+    transform: rotate(-14deg);
+  }
+}
 @-webkit-keyframes rotate {
-	100% {
-		transform: rotate(-14deg);
-	}
+  50% {
+    transform: rotate(-14deg);
+  }
 }
 @keyframes rotate {
-	100% {
-		transform: rotate(-14deg);
-	}
+  50% {
+    transform: rotate(-14deg);
+  }
 }
 ~~~
 
