finish ibm course 6

--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -1,6 +1,6 @@
 ---
 title: "DataQuest 1: Step 1 - Python Introduction"
-categories: [data]
+categories: [data,python]
 tags: [dataquest, python, data]
 maths: 1
 toc: 1
