--- a/_posts/others/2019-04-04-game.md
+++ b/_posts/others/2019-04-04-game.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Collection of useful links and websites
+title: Collection of good games
 categories: [other]
 tags: [game]
 toc: 1
