--- a/_posts/others/2018-10-22-list-film.md
+++ b/_posts/others/2018-10-22-list-film.md
@@ -15,7 +15,8 @@ My collection of good films.
 ## Movies
 
 - Handcock : superhero + bad guys.
-- The Martian (2015): an astronaute 
+- The Martian (2015): một mình trên sao hỏa.
+- The invisible guest (2016) : phim tây ban nha, từ một vụ tai nạn xe hơi, bao rắc rối đổ dồn vào một danh nhân thành đạt cùng cô bồ lẻ. Mọi khúc mắc dần được hé lộ và hồi hợp đến tình tiết cuối cùng.
 
 ## Series
 
