--- a/_posts/others/2018-10-22-list-film.md
+++ b/_posts/others/2018-10-22-list-film.md
@@ -14,10 +14,24 @@ My collection of good films.
 
 ## Movies
 
-- Handcock : superhero + bad guys.
-- The Martian (2015): một mình trên sao hỏa.
-- The invisible guest (2016) : phim tây ban nha, từ một vụ tai nạn xe hơi, bao rắc rối đổ dồn vào một danh nhân thành đạt cùng cô bồ lẻ. Mọi khúc mắc dần được hé lộ và hồi hợp đến tình tiết cuối cùng.
+- **Handcock**: superhero + bad guys.
+- **The Martian** (2015): một mình trên sao hỏa.
+- **The invisible guest** (2016): phim tây ban nha, từ một vụ tai nạn xe hơi, bao rắc rối đổ dồn vào một danh nhân thành đạt cùng cô bồ lẻ. Mọi khúc mắc dần được hé lộ và hồi hợp đến tình tiết cuối cùng.
+- **Intouchable**: phim Pháp cảm động về anh da đen và ông tàn tật.
+- **The Terminal**: một phim có Tom Hanks, ở sân bay không thể ra ngoài.
+- **The Fight Club**: phim hơi dài nhưng nhiều triết lý sống, có twist bự.
+- **Triangle**: phim hại não và vòng lặp thời gian.
+- **Happy Death Day**: có 2 phần nhưng phân 2 khá tệ, vòng lặp thời gian.
+
 
 ## Series
 
-- Daredevil : superhero + from normal human
+- **Daredevil**: superhero + from normal human
+- **Breaking Bad**: quá kinh điển, phim bộ hay nhất mọi thời đại. Chuyển biến tâm lý nhân vật quá đỉnh.
+- **Heroes**: phiên bản truyền hình của X-men.
+- **Chernobyl**: phim rất chân thực về thảm họa hạt nhân.
+- **Genius**: phim về Albert Einstein.
+- **Game of Thrones**: phần cuối hơi củ chuối.
+- **The road number 1**: phim Hàn về đề tài chiến tranh rất chân thực.
+- **IRIS**: phim Hàn, mật danh có Kim Tae Hee và Lee Byung-hun.
+- **Extra French**: (có nhiều phiên bản tiếng khác), thích hợp xem để học tiếng.
