--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -14,18 +14,18 @@ Only for French.
 - V + to them = leur + V
 - From [Duolingo](https://www.duolingo.com/skill/fr/At-Work-5/tips).
 
-Elle écrit une lettre **à Jean**.
+Elle écrit une lettre **à Jean**.<br />
 Elle **lui** écrit une lettre.
 
-Elle répond **à Sylvie**.
+Elle répond **à Sylvie**.<br />
 Elle **lui** répond.
 
-Elle donne un jouet **au chat**.
+Elle donne un jouet **au chat**.<br />
 Elle **lui** donne un jouet.
 
 ---
 
-La directrice envoie un e‑mail **aux employés**.
+La directrice envoie un e‑mail **aux employés**.<br />
 Elle **leur** envoie un e‑mail.
 
 ---
@@ -34,3 +34,119 @@ Je dois **lui** parler.
 Je peux **leur** écrire un e‑mail.
 Je **leur** ai envoyé un e‑mail.
 
+## Je le lui donne
+
+Remember that words like **le, la, les, lui, leur, me, te** come **before** the verb. Sometimes you’ll use not only one, but two of these words!
+
+Je **lui** donne le livre.<br />
+Je **le lui** donne.
+
+Je **leur** donne la pomme.<br />
+Je **la leur** donne.
+
+Je **leur** donne les livres.<br />
+Je **les leur** donne.
+
+## Passé composé -ir
+
+Ouvrir, couvrir, and offrir also have the same endings in passé composé!
+
+J’**ai ouvert** la porte.<br />
+I opened the door.
+
+Elle a couvert son bébé parce qu’il fait froid.<br />
+She covered up her baby because it’s cold out.
+
+J**’ai offert** des fleurs à ma copine pour son anniversaire.<br />
+I gave flowers to my girlfriend for her birthday.
+
+Notice that offrir can mean to offer or to give. But when it’s used to talk about gifts, offrir doesn’t mean to offer a gift, it really means to give it!
+
+Je lui ai offert un cadeau.<br />
+I gave her a gift.
+
+Note that **lui, leur** are placed **after** le, la, les.<br />
+But when we use **me, te, nous, vous**, these words come **before** le, la, les.
+
+## leur/les
+
+Watch out for the difference between les and leur: les is the direct object (the things you offer) and leur the indirect object (whom you offer them to).
+
+## On y va !
+
+The word **y** replaces a place in a sentence. It often means **there** but sometimes shows up in French where we'd otherwise leave out the word **there** in English. Just like en, lui, les, and leur, **y comes before the verb**.
+
+À quelle heure tu vas **au restaurant** ? J’**y** vais vers huit heures.<br />
+What time are you going to the restaurant? I’m going around 8 o’clock.
+
+L’été dernier Marc est allé **en France**, et il **y** retourne l’été prochain.<br />
+Last summer Marc went to France, and he’s going back next summer.
+
+And there are a couple French expressions with **y** that always mean **Let’s go**!
+
+On **y** va !<br />
+Let’s go!
+
+Allons‑**y** !<br />
+Let’s go!
+
+## en
+
+- **Il n’y en a pas** = there isn’t (aren’t) any.
+  - Je voudrais acheter des oranges, mais il n’y en a pas.
+- **Il n’y en a plus** = there isn’t (aren’t) any left.
+  - Je voudrais des œufs, mais il n’y en a plus.
+
+## Ça te dit d’aller au resto ?
+
+To **invite someone** you know well to do something, use **Ça te dit de…** ? When speaking to more than one person, use **Ça vous dit de…** ?
+
+**Ça te dit d**’aller au musée cet après‑midi ?<br />
+Do you want to go to the museum this afternoon?
+
+**Ça te dit de** dîner au restaurant ce soir ?<br />
+Do you want to go out to eat tonight?
+
+Les enfants, **ça vous dit d**’aller au parc ?<br />
+Children, do you (all) want to go to the park?
+
+## Imparfait
+
+We’ve already seen how the **imparfait** can be used to talk about the way something was. You can also use it to talk about how something used to be.
+
+Avant, j’**habitais** avec mes parents.<br />
+Before, I used to live with my parents.
+
+Avant, nous **écrivions** des lettres.<br />
+Before, we used to write letters.
+
+Avant, on **travaillait** sans Internet.<br />
+Before, we used to work without Internet.
+
+When forming the imparfait, you’ll start from forms like nous écriv**ons** and nous pouv**ons**, drop **‑ons**, and then add the endings listed below.
+
+## Expressions with avoir
+
+- avoir l’air = to look, to seem
+- avoir envie de = to want, to be in the mood for
+- avoir honte de qqn = be ashamed of so
+
+## should
+
+Au lieu de rester, elles **devraient** partir.
+
+Au lieu de fleurs, vous **devriez** offrir des chocolats.
+
+Au lieu d’un chien, tu **devrais** acheter un chat.
+
+
+## mots
+
+- partir **à** = going somewhere / partir **de** = going from somewhere.
+- The word **naissance** means birth, but **cadeau de naissance** means baby gift!
+- And be careful! **Date de naissance** is the day you were born. It’s not the same as your **anniversaire**, or birthday!
+- **commencer à** = you are starting to do something
+- il faut + du, de la, des = you need something in general
+  - Il faut des œufs pour faire une omelette. = You need eggs to make an omelette.
+- **se** + V = V + **each other**.
+  - se voir = see each other
