--- a/_posts/others/2018-10-22-list-film.md
+++ b/_posts/others/2018-10-22-list-film.md
@@ -22,6 +22,8 @@ My collection of good films.
 - **The Fight Club**: phim hơi dài nhưng nhiều triết lý sống, có twist bự.
 - **Triangle**: phim hại não và vòng lặp thời gian.
 - **Happy Death Day**: có 2 phần nhưng phân 2 khá tệ, vòng lặp thời gian.
+- **The Lake House** (2006): Hai người yêu nhau, viết thư cho nhau nhưng cách nhau tận 2 năm trời. Liệu họ có thể đến được với nhau?
+- **The Prestige** (2006): hai nhà ảo thuật cạnh tranh nhau và có twist. Một bộ phim của Christopher Nolan.
 
 
 ## Series
@@ -35,3 +37,4 @@ My collection of good films.
 - **The road number 1**: phim Hàn về đề tài chiến tranh rất chân thực.
 - **IRIS**: phim Hàn, mật danh có Kim Tae Hee và Lee Byung-hun.
 - **Extra French**: (có nhiều phiên bản tiếng khác), thích hợp xem để học tiếng.
+- **Alice et Antoine**: loạt phim ngắn vài phút, thích hợp để xem học tiếng Pháp.
