--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -34,6 +34,15 @@ Je dois **lui** parler.
 Je peux **leur** écrire un e‑mail.
 Je **leur** ai envoyé un e‑mail.
 
+## le/la/les
+
+- Prends‑le! = Take it!
+- Appelle‑la! = Call her!
+- Achète‑les! = Buy them!
+- Ne le prends pas ! = Don't take it!
+- Ne l’appelle pas ! = Don't call her!
+- Ne les achète pas ! = Don't buy them!
+
 ## Je le lui donne
 
 Remember that words like **le, la, les, lui, leur, me, te** come **before** the verb. Sometimes you’ll use not only one, but two of these words!
@@ -112,7 +121,7 @@ Children, do you (all) want to go to the park?
 
 ## Imparfait
 
-We’ve already seen how the **imparfait** can be used to talk about the way something was. You can also use it to talk about how something used to be.
+We’ve already seen how the **imparfait** can be used to talk about the way something was. You can also use it to talk about how **something used to be**.
 
 Avant, j’**habitais** avec mes parents.<br />
 Before, I used to live with my parents.
@@ -139,6 +148,13 @@ Au lieu de fleurs, vous **devriez** offrir des chocolats.
 
 Au lieu d’un chien, tu **devrais** acheter un chat.
 
+## de + (pluriel) adj + N
+
+When using these adjectives in the **plural**, we use **de** before them, instead of **des**.
+
+C’est un **bon** livre.<br />
+Je porte **de** nouvelles chaussures.<br />
+Tu as de vieux meubles.
 
 ## mots
 
@@ -150,3 +166,26 @@ Au lieu d’un chien, tu **devrais** acheter un chat.
   - Il faut des œufs pour faire une omelette. = You need eggs to make an omelette.
 - **se** + V = V + **each other**.
   - se voir = see each other
+- recevoir = nhận, tiếp đón
+- **en** + 1985 
+  - mais **au** + vingt et unième **siècle** (tk 21).
+  - **dans les années** + quarante = The 40s
+- **parler de + qqc** = to talk about s/t
+- **J'en ai marre!** = tôi ngán quá rồi
+  - Elle en a marre de conduire tout le temps.
+- **dans le nord** de la france = **in** the north of France.
+  - **Dans le nord** du Canada, il fait très froid. = **In northern** Canada, it is very cold.
+  - L’Espagne se trouve **au sud** de la France. = Spain is **south of** France.
+- **descendre de** = get off
+  - DIFF: **monter dans**
+  - Nous descendons du train. = We get off the train.
+- When we use **tout before adjectives** (other than seul), the meaning of tout is **very or so**.
+  - Cette table est **toute petite**. = This table is **very small**
+- Il est **tout seul** =  all alone, by yourself.
+  - Ils mangent **tout** seuls.
+  - Elles sont **toutes** seules à la maison.
+  - Il va **tout** seul au cinéma.
+- un taf = un boulot = un travail 
+  - tafer = travailler
+- J'ai **un** chien noir ---> J'ai **des** chiens noirs
+  - J'ai **un** beau chien ---> J'ai **de beaux** chiens
