--- a/_posts/french/2019-03-26-french-2.md
+++ b/_posts/french/2019-03-26-french-2.md
@@ -6,12 +6,12 @@ tags: [french]
 toc: 1
 ---
 
-# Les videos
+## Les videos
 
-- [Tout quitter pour vivre à la campagne | La vie](https://www.youtube.com/watch?v=wEjuxnTJx8k&t=17s)
+- [Tout quitter pour vivre à la campagne: La vie](https://www.youtube.com/watch?v=wEjuxnTJx8k&t=17s)
 
 
-# Les films complets
+## Les films complets
 
 - **Extra French**: (có nhiều phiên bản tiếng khác), thích hợp xem để học tiếng.
 - **Alice et Antoine**: loạt phim ngắn vài phút, thích hợp để xem học tiếng Pháp.
