--- a/_posts/it/2018-10-21-IT-tips.md
+++ b/_posts/it/2018-10-21-IT-tips.md
@@ -59,6 +59,10 @@ Vào Settings > Mobile hotspot > Kích hoạt và sửa tùy chọn!
 - In the facetime calling, swipe up and click on airplay to share.
 - On LonelyScreen, click the record button.
 
+### Download youtube playlist & convert to mp3
+
+Download app Playlist Downloader for youtube của Omansak.
+
 ## cmder
 
 ### Thay đổi directory mặc định của cmder
