before deleting surface

--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -189,3 +189,8 @@ Tu as de vieux meubles.
   - tafer = travailler
 - J'ai **un** chien noir ---> J'ai **des** chiens noirs
   - J'ai **un** beau chien ---> J'ai **de beaux** chiens
+- Elle nous a raconté **quelque chose de** drôle. = She told us **something** funny.
+  - quelque chose de + adj = something + adj
+- Il se passe quelque chose ici = Something's happening here.
+- **pendant** = during: pendant + N
+  - **pendant que** = while = trong khi: pendant que + phrase
