--- a/_posts/french/2019-03-26-french-2.md
+++ b/_posts/french/2019-03-26-french-2.md
@@ -4,7 +4,26 @@ title: "French 2: Videos"
 categories: french
 tags: [french]
 toc: 1
+date: 2019-07-18
 ---
+
+## Channels
+
+- [Francais avec Pierre](https://www.youtube.com/channel/UCVgW9ZQaGBk6fsiPgE2mYDg)
+- [Brut](https://www.youtube.com/channel/UCSKdvgqdnj72_SLggp7BDTg): news
+- [innerFrench](https://www.youtube.com/channel/UCI4xp8qHD1MDErkqxb1dPbA)
+- [Français Authentique](https://www.youtube.com/channel/UCQpM25U6iqaRSO-SZxd5oDw)
+- [7 jours sur la planète](https://www.youtube.com/user/7jours): news & talk
+- [J'irai dormir chez vous](https://www.youtube.com/channel/UCNM_pawuYtcc-FCWoiJAW4w): voyage
+- [Easy French](https://www.youtube.com/user/magauchsein/playlists?view=50&sort=dd&shelf_id=20)
+- [1 jour 1 question](https://www.youtube.com/channel/UCLmlUMA_bGiMWWgfDwfNDgw)
+- [Tu mourras moins bête](https://www.youtube.com/channel/UCKtG_lXZk4pRJkapfK0eprA)
+- [La statistique expliquée à mon chat](https://www.youtube.com/channel/UCWty1tzwZW_ZNSp5GVGteaA): statistics
+- [French TED](https://www.youtube.com/playlist?list=PLx5TmpeF4jNKZ4Ru22CwkFHHas0FX-kYa)
+
+## VLogs
+
+- [SolangeTeParle](https://www.youtube.com/user/SolangeTeParle) 
 
 ## Les videos
 
@@ -13,7 +32,9 @@ toc: 1
 
 ## Les films complets
 
-- **Extra French**: (có nhiều phiên bản tiếng khác), thích hợp xem để học tiếng.
-- **Alice et Antoine**: loạt phim ngắn vài phút, thích hợp để xem học tiếng Pháp.
+- [Extra French](https://www.youtube.com/watch?v=EaNqp4FXh-s): (có nhiều phiên bản tiếng khác), thích hợp xem để học tiếng.
+- [Alice et Antoine](https://www.youtube.com/watch?v=_GWluk3XJC4&list=PLM9z0OWndizNb6ByFLM11LPP3pM1ANuYs): loạt phim ngắn vài phút, thích hợp để xem học tiếng Pháp.
+- [Fais pas ci, Fais pas ça](https://www.youtube.com/channel/UCXnO_LAy-Lz2eKs5O8nNBkw)
+- [10%](http://www1.filmstreaming.vip/series/dix-pour-cent/)
 
 
