--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -194,3 +194,5 @@ Tu as de vieux meubles.
 - Il se passe quelque chose ici = Something's happening here.
 - **pendant** = during: pendant + N
   - **pendant que** = while = trong khi: pendant que + phrase
+- Le médecin = nghề bác sĩ (tui cần đi bác sĩ)
+  - doctor = nhân xưng (docteur Thi; docteur, tui thấy đau ở đây)
