--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -134,6 +134,18 @@ Before, we used to work without Internet.
 
 When forming the imparfait, you’ll start from forms like nous écriv**ons** and nous pouv**ons**, drop **‑ons**, and then add the endings listed below.
 
+## Futur
+
+- Avoir -> **aur-**
+- Être -> **ser-**
+- Aller -> **ira-**
+- Faire -> **fer-**
+
+## Si / if clause
+
+- Si + present, futur
+  - Si tu **étudies**, tu **auras** une bonne note.
+
 ## Expressions with avoir
 
 - avoir l’air = to look, to seem
@@ -168,7 +180,7 @@ Tu as de vieux meubles.
   - se voir = see each other
 - recevoir = nhận, tiếp đón
 - **en** + 1985 
-  - mais **au** + vingt et unième **siècle** (tk 21).
+  - mais **au** + vingt et unième **ècle** (tk 21).
   - **dans les années** + quarante = The 40s
 - **parler de + qqc** = to talk about s/t
 - **J'en ai marre!** = tôi ngán quá rồi
@@ -177,7 +189,7 @@ Tu as de vieux meubles.
   - **Dans le nord** du Canada, il fait très froid. = **In northern** Canada, it is very cold.
   - L’Espagne se trouve **au sud** de la France. = Spain is **south of** France.
 - **descendre de** = get off
-  - DIFF: **monter dans**
+  - DF: **monter dans**
   - Nous descendons du train. = We get off the train.
 - When we use **tout before adjectives** (other than seul), the meaning of tout is **very or so**.
   - Cette table est **toute petite**. = This table is **very small**
@@ -196,3 +208,6 @@ Tu as de vieux meubles.
   - **pendant que** = while = trong khi: pendant que + phrase
 - Le médecin = nghề bác sĩ (tui cần đi bác sĩ)
   - doctor = nhân xưng (docteur Thi; docteur, tui thấy đau ở đây)
+- J'ai froid/chaude **à** + nơi bị lạnh
+  - J'ai froid/chaude à la tête.
+- Je viens prendre de vos nouvelles = Tôi muốn cập nhật tình hình của bạn, đại loại vậy!
