learn to draw with jsx

--- a/_posts/js/2019-08-05-jsxgraph-1.md
+++ b/_posts/js/2019-08-05-jsxgraph-1.md
@@ -10,8 +10,13 @@ I wonder how we can draw mathematical graphs, charts, idea,... using only web's 
 
 ## Docs
 
+- Step by step from the beginning: [here](https://jsxgraph.org/wiki/index.php/Create_your_own_constructions/visualizations_using_JavaScript).
 - [Wiki](https://jsxgraph.org/wiki/index.php/Main_Page)
 - [Very first examples](http://www.onemathematicalcat.org/JSXGraphDocs/boardAttributes.htm)
+- [JSXGraph Reference Card](http://jsxgraph.uni-bayreuth.de/distrib/jsxgraph_refcard.pdf)
+- [This site](http://www.onemathematicalcat.org/JSXGraphDocs/boardAttributes.htm) contains a lot of settings and examples.
+- [Geometrical shapes examples](http://www.onemathematicalcat.org/JSXGraphDocs/JSXGraphDocs3.htm)
+- [Source options](https://jsxgraph.uni-bayreuth.de/docs/symbols/src/src_options.js.html)
 
 ## Installation
 
@@ -44,7 +49,7 @@ I wonder how we can draw mathematical graphs, charts, idea,... using only web's 
 
 ## Automatically reload site if js file changes
 
-Using [live-server](https://github.com/tapio/live-server).s
+Using [live-server](https://github.com/tapio/live-server)
 
 - Install [nodejs](https://nodejs.org/en/download/) first.
 - Install live-server using nodejs: `npm install -g live-server`
@@ -52,6 +57,48 @@ Using [live-server](https://github.com/tapio/live-server).s
 - run `live-server` (accept all networks notification)
 - `http://127.0.0.1:8080/`
 - Enjoy!
+
+## Settings
+
+- Options
+
+~~~ js
+JXG.Options
+  .axis
+    .ticks
+      .majorHeight = 0
+      .insertTicks = false
+      .ticksDistance = 10 // height of main ticks
+~~~
+
+You should "free" a `board` before reusing it
+
+~~~ js
+JXG.JSXGraph.freeBoard(board);
+~~~
+
+Everything below is inside
+
+~~~ js
+var board = JXG.JSXGraph.initBoard('box',
+  {
+    // the codes
+  }
+);
+~~~
+
+- Position of the original coordinate: `originX:50, originY:25` (from the left and the top **in pixel**)
+- `unitX:20, unitY:10`: determines the number of pixels for one unit on the x-axis/y-axis
+- others
+
+  ~~~ js
+  axis: true, // display axis?
+  grid: false, // display grid?
+  showNavigation: false, // show navigation?
+  showCopyright: false // show copyright?
+  ~~~
+
+- 
 
 ## First examples
 
